# pdfly

./: .all-contributorsrc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .typos.toml  2-up.py  CHANGELOG.md  CONTRIBUTORS.md  Makefile  README.md  RECOVERED_FILE.tmp  certificate.pem  certs.p12  ci.in  ci.txt  dependabot.yml  make_release.py  pdf-image-extractor.py  private_key.pem  pylock.toml  pypproject.toml  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/scripts/: check_pr_title.py
.github/workflows/: check-gitignored-files.yml  code-quality.yaml  create-github-release.yaml  github-ci.yaml  publish-to-pypi.yaml  release.yaml  title-check.yml
cpdf/: __main__.py  cat.py  cli.py  extract_images.py  image_extractor.py  metadata.py  offset_updater.py  up2.py
docs/: conf.py  index.rst
docs/dev/: intro.md  skill.md  testing.md
docs/meta/: project-governance.md
docs/user/: installation.md  subcommand-2-up.md  subcommand-booklet.md  subcommand-cat.md  subcommand-check-sign.md  subcommand-compress.md  subcommand-extract-annotated-pages.md  subcommand-extract-images.md  subcommand-extract-text.md  subcommand-meta.md  subcommand-pagemeta.md  subcommand-rm.md  subcommand-rotate.md  subcommand-sign.md  subcommand-uncompress.md  subcommand-update-offsets.md  subcommand-x2pdf.md
pdfly/: __init__.py  __main__.py  _utils.py  booklet.py  cat.py  check_sign.py  cli.py  compress.py  extract_annotated_pages.py  extract_images.py  metadata.py  pagemeta.py  rm.py  rotate.py  sign.py  tiles.py  uncompress.py  up2.py  update_offsets.py  x2pdf.py
requirements/: ci.in  ci.txt  dev.in  dev.txt  docs.in  docs.txt
resources/: signing-certificate.crt  signing-certificate.p12
scripts/: pdf-image-extractor.py
skills/pdfly-cli/: SKILL.md
skills/pdfly-cli/references/: cat.md  page-ranges.md  rotate.md  sign.md
tests/: __init__.py  conftest.py  post-changes-test-results.txt  pre-changes-test-results.txt  test_booklet.py  test_cat.py  test_check_sign.py  test_cli.py  test_compress.py  test_extract_annotated_pages.py  test_extract_images.py  test_extract_text.py  test_metadata.py  test_pagemeta.py  test_rm.py  test_rotate.py  test_sign.py  test_uncompress.py  test_up2.py  test_up2_layout.py  test_update_offsets.py  test_x2pdf.py
