[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = pdfly

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

description = A pure-python CLI application to manipulate PDF files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pdf, pure-python

url = https://github.com/py-pdf/pdfly
license = BSD-3-Clause
license_file = LICENSE

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6.1
install_requires =
    pypdf>3.0.0
    typer
    pillow
    pydantic
    rich

[options.entry_points]
console_scripts =
    pdfly = pdfly.cli:entry_point

[tool:pytest]
addopts = --doctest-modules --cov=. --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=30
doctest_encoding = utf-8


[mutmut]
backup = False
runner = ./mutmut-test.sh
tests_dir = tests/

[mypy]
ignore_missing_imports = true
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = false
show_error_codes = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = E501, E203, W503, PT007, SIM115
exclude = build/*
per-file-ignores =
    tests/*: ASS001
